# self-inoculation

./: .gitignore  inspect_eval.py  main.py  prompts.py  pyproject.toml  scorers.py
data/: prompts.yaml
